crates/formatter/tests/snapshots/snapshots__synapse__state__delta__94__01_state_groups_persisting_inserted_ts.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2026 Element Creations Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- Record when we marked a state group as being persisted, so that we can clear
-- out rows left behind by a persist that never finished.
--
-- The rows already in the table are stamped with the time this runs, so they get
-- the same grace period as a new row before we treat them as stale. The default
-- covers instances that haven't been upgraded yet, which insert without the
-- column, and is what lets the column be NOT NULL during a rolling upgrade.
alter table state_groups_persisting
	add column inserted_ts bigint not null
		default extract(epoch from now()) * 1000;
